<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_eap_logo_background"
            android:padding="@dimen/padding_small"
            android:contentDescription="@string/eap"
            android:src="@drawable/eap_logo" />

        <TextView
            android:padding="@dimen/padding_small"
            android:background="@color/color_eap_logo_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:text="@string/app_description"
            android:textIsSelectable="true"
            android:textSize="@dimen/font_size_small"
            android:textColor="@color/color_eap_logo_dark_blue"
            android:textStyle="bold"/>

        <TextView
            android:padding="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="center"
            android:text="@string/eap_website"
            android:textIsSelectable="true"
            android:textSize="@dimen/font_size_small"
            android:textColor="@color/color_eap_logo_dark_blue"
            android:textStyle="bold"
            android:autoLink="web"/>

    </LinearLayout>

</ScrollView>