<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_eap_logo_purple"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector_my_transp_background"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_action_not_ok"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/backlog"
                android:src="@drawable/ic_action_backlog"
                android:layout_marginRight="@dimen/margin_small"/>

            <TextView android:id="@+id/my_title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="2"/>

        </LinearLayout>


        <ImageButton
            android:id="@+id/save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector_my_transp_background"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_action_ok" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>