<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:padding="@dimen/padding_small">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:clickable="false"
                android:contentDescription="@string/sprint"
                android:focusable="false"
                android:src="@drawable/ic_action_project_purple" />

            <TextView
                android:id="@+id/project_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_size_small" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:clickable="false"
                android:contentDescription="@string/sprint"
                android:focusable="false"
                android:src="@drawable/ic_action_event_purple"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_default"
                android:text="@string/sprint_number"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="@dimen/font_size_small" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:clickable="false"
                android:contentDescription="@string/sprint"
                android:focusable="false"
                android:src="@drawable/ic_action_time_purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_default"
                android:text="@string/start"
                android:textSize="@dimen/font_size_small" />


            <EditText
                android:id="@+id/start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/my_date_format_sprint"
                android:inputType="date"
                android:textSize="@dimen/font_size_small" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:clickable="false"
                android:contentDescription="@string/sprint"
                android:focusable="false"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_default"
                android:text="@string/sprint_duration"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/duration"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:gravity="center"
                android:inputType="number"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_weight="1"
                android:text="@string/days"
                android:textSize="@dimen/font_size_small" />

        </TableRow>

    </TableLayout>

</ScrollView>